- linux 下的所需配置